Add cmd for install golang 1.23.1 [skip ci]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,6 +86,11 @@ jobs:
           at: .
 
       - run:
+          name: "Update golang dependency"
+          command: |
+            go install golang.org/dl/go1.23.1@latest
+
+      - run:
           name: "Publish Release on GitHub"
           command: |
             go install github.com/tcnksm/ghr@latest
